--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -23,7 +23,7 @@ body {
 			@include align-items(center);
 			overflow: hidden;
 			img {
-				widows: 100%;
+				width: 100%;
 			}
 		}
 		.lesson-header__filter {
@@ -41,7 +41,6 @@ body {
 			position: absolute;
 			top: 0;
 			left: 0;
-			@include box-sizing(border-box);
 			padding-top: 7%;
 			.lesson-header__subtitle {
 				font-size: 1.2rem;
@@ -492,6 +491,211 @@ body {
 				@include transition(all 0.5s ease);
 				img {
 					width: 100%;
+				}
+			}
+		}
+	}
+}
+@media screen and (min-width: 320px) and (max-width: 800px) {
+	.lesson {
+		.lesson-header {
+			width: 100%;
+			height: 29vh;
+			position: relative;
+			.lesson-header__bg {
+				img {
+					width: unset;
+					height: 100%;
+				}
+			}
+			.lesson-header__text {
+				padding: 0 12%;
+				@include box-sizing(border-box);
+				padding-top: 7%;
+				.lesson-header__subtitle {
+					font-size: 1rem;
+				}
+				.lesson-header__title {
+					font-size: 1.4rem;
+					line-height: 2.4rem;
+				}
+			}
+		}
+		.lesson-content {
+			padding: 0 12%;
+			margin-top: -25%;
+			@include flex-direction(column);
+			.lesson-content__type {
+				width: 100%;
+				margin-left: 0;
+				margin-bottom: 10rem;
+				.lesson-card {
+					background: $white;
+					@include box-shadow(0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5));				
+					.lesson-card__title {
+						font-size: 2rem;
+						width: 70%;
+						padding: 1rem 3rem;
+						margin-top: 3.5rem;
+					}
+					.lesson-card__desc {
+						width: 80%;
+						height: unset;
+						font-size: 1.2rem;
+						line-height: 2.4rem;
+						margin-top: 3.5rem;
+					}
+					.lesson-card__price {
+						font-size: 2rem;
+						margin-top: 2.5rem;
+					}
+					.lesson-card__price-desc {
+						width: 65%;
+					}
+					.lesson-card__teacher-profile {
+						margin-top: 2rem;
+						padding: 0 5%;
+						margin-bottom: 10rem;
+						.teacher-profile {
+							margin-left: 5%;						
+						}
+					}
+
+				}
+				.lesson-button {
+					width: 100%;
+					height: 10rem;
+					bottom: -4rem;
+					&:hover {
+						@include box-shadow(none);					
+					}				
+					.lesson-button__submit {
+						bottom: 4rem;
+						font-size: 1.6rem;
+					}
+				}
+			}
+		}
+	}
+	.teacher {
+		padding: 3% 7% 15% 7%;
+		margin-top: 4rem;
+		.teacher-wrapper {
+			.teacher-profile {
+				width: 50%;
+				margin-top: 5rem;
+				.teacher-profile__pic {
+					width: 9rem;
+					height: 9rem;				
+					img {
+						width: 100%;
+						top: 7%;
+					}
+				}
+				.teacher-profile__name {
+					margin-top: 2rem;
+					font-size: 1.4rem;
+				}
+				.teacher-profile__character {
+					margin-top: 1.5rem;
+					font-size: 1.2rem;
+					line-height: 2rem;
+					width: 90%;
+				}
+			}
+		}
+	}
+	.safety {
+		padding: 0 5%;
+		margin-top: 10rem;
+		.safety-indicator {
+			width: 15%;
+		}
+		.safety-title {
+			font-size: 1.6rem;
+			margin-top: 3rem;
+		}
+		.safety-text {
+			margin-top: 2rem;
+			width: 80%;
+		}
+		.safety-button-wrapper {
+			margin-top: 1rem;		
+			padding: 0 18%;
+			@include flex-direction(column);
+			.safety-button {
+				margin-left: 0;
+				width: 100%;
+				height: 6rem;
+				margin-top: 3rem;
+				border-radius: 6rem;
+				padding-right: 3rem;
+				p {
+					font-size: 1.4rem;
+					line-height: 1.8rem;
+				}				
+			}
+		}
+	}
+	.snap {
+		height: 130vw;
+		.snap-bg {
+			img {
+				width: unset;
+				height: 100%;
+				bottom: unset;
+				left: -61%;
+			}
+		}
+		.snap-content {
+			height: 130vw;
+			.snap-content__header {
+				width: 70%;
+				height: 14rem;
+				.snap-content__header-subtitle {
+					margin-left: 12%;
+					margin-top: 3rem;
+					font-size: 1rem;
+				}
+				.snap-content__header-title {
+					font-size: 1.6rem;
+					line-height: 2.4rem;
+					margin-top: 1rem;
+					margin-left: 12%;
+					word-break: keep-all;
+					word-wrap: break-word;
+				}
+			}
+			.snap-content__gallery {
+				width: 30%;
+				margin-right: 5%;
+				right: 0;
+				bottom: 10%;
+				.gallery-tab {
+					height: 17vw;
+					margin-top: 2rem;
+					@include box-shadow(0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5));
+					.gallery-title {
+						padding-left: 5%;
+						font-size: 1rem;
+						bottom: 1rem;
+					}
+				}
+			}
+			.snap-content__more {
+				bottom: 10%;
+				margin-left: 5%;
+				width: 40%;
+				height: 6rem;
+				border-radius: 6rem;
+				padding-left: 2rem;
+				padding-right: 2rem;
+				p{
+					font-size: 1.2rem;
+					line-height: 1.8rem;
+				}
+				span {
+					width: 1.8rem;
 				}
 			}
 		}
