--- a/stylesheets/css/class.css
+++ b/stylesheets/css/class.css
@@ -10,9 +10,9 @@ body { width: 100%; overflow-x: hidden; }
 .lesson { width: 100%; }
 .lesson .lesson-header { width: 100%; height: 50vh; position: relative; }
 .lesson .lesson-header .lesson-header__bg { width: 100%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; overflow: hidden; }
-.lesson .lesson-header .lesson-header__bg img { widows: 100%; }
+.lesson .lesson-header .lesson-header__bg img { width: 100%; }
 .lesson .lesson-header .lesson-header__filter { width: 100%; height: 100%; background-color: rgba(19, 56, 209, 0.5); position: absolute; top: 0; left: 0; }
-.lesson .lesson-header .lesson-header__text { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; width: 100%; position: absolute; top: 0; left: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-top: 7%; }
+.lesson .lesson-header .lesson-header__text { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; width: 100%; position: absolute; top: 0; left: 0; padding-top: 7%; }
 .lesson .lesson-header .lesson-header__text .lesson-header__subtitle { font-size: 1.2rem; font-family: 'oACYCZno'; color: white; }
 .lesson .lesson-header .lesson-header__text .lesson-header__title { font-size: 2rem; line-height: 2.8rem; font-family: 'oACYCZno'; font-weight: bold; color: white; margin-top: 1rem; }
 .lesson .lesson-content { width: 100%; height: auto; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; margin-top: -10%; }
@@ -78,5 +78,48 @@ body { width: 100%; overflow-x: hidden; }
 .snap .snap-content .snap-content__more p { font-size: 1.8rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: white; }
 .snap .snap-content .snap-content__more span { width: 2.5rem; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .snap .snap-content .snap-content__more span img { width: 100%; }
+
+@media screen and (min-width: 320px) and (max-width: 800px) { .lesson .lesson-header { width: 100%; height: 29vh; position: relative; }
+  .lesson .lesson-header .lesson-header__bg img { width: unset; height: 100%; }
+  .lesson .lesson-header .lesson-header__text { padding: 0 12%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-top: 7%; }
+  .lesson .lesson-header .lesson-header__text .lesson-header__subtitle { font-size: 1rem; }
+  .lesson .lesson-header .lesson-header__text .lesson-header__title { font-size: 1.4rem; line-height: 2.4rem; }
+  .lesson .lesson-content { padding: 0 12%; margin-top: -25%; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .lesson .lesson-content .lesson-content__type { width: 100%; margin-left: 0; margin-bottom: 10rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card { background: white; -webkit-box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__title { font-size: 2rem; width: 70%; padding: 1rem 3rem; margin-top: 3.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__desc { width: 80%; height: unset; font-size: 1.2rem; line-height: 2.4rem; margin-top: 3.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__price { font-size: 2rem; margin-top: 2.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__price-desc { width: 65%; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile { margin-top: 2rem; padding: 0 5%; margin-bottom: 10rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile { margin-left: 5%; }
+  .lesson .lesson-content .lesson-content__type .lesson-button { width: 100%; height: 10rem; bottom: -4rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-button:hover { -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
+  .lesson .lesson-content .lesson-content__type .lesson-button .lesson-button__submit { bottom: 4rem; font-size: 1.6rem; }
+  .teacher { padding: 3% 7% 15% 7%; margin-top: 4rem; }
+  .teacher .teacher-wrapper .teacher-profile { width: 50%; margin-top: 5rem; }
+  .teacher .teacher-wrapper .teacher-profile .teacher-profile__pic { width: 9rem; height: 9rem; }
+  .teacher .teacher-wrapper .teacher-profile .teacher-profile__pic img { width: 100%; top: 7%; }
+  .teacher .teacher-wrapper .teacher-profile .teacher-profile__name { margin-top: 2rem; font-size: 1.4rem; }
+  .teacher .teacher-wrapper .teacher-profile .teacher-profile__character { margin-top: 1.5rem; font-size: 1.2rem; line-height: 2rem; width: 90%; }
+  .safety { padding: 0 5%; margin-top: 10rem; }
+  .safety .safety-indicator { width: 15%; }
+  .safety .safety-title { font-size: 1.6rem; margin-top: 3rem; }
+  .safety .safety-text { margin-top: 2rem; width: 80%; }
+  .safety .safety-button-wrapper { margin-top: 1rem; padding: 0 18%; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .safety .safety-button-wrapper .safety-button { margin-left: 0; width: 100%; height: 6rem; margin-top: 3rem; border-radius: 6rem; padding-right: 3rem; }
+  .safety .safety-button-wrapper .safety-button p { font-size: 1.4rem; line-height: 1.8rem; }
+  .snap { height: 130vw; }
+  .snap .snap-bg img { width: unset; height: 100%; bottom: unset; left: -61%; }
+  .snap .snap-content { height: 130vw; }
+  .snap .snap-content .snap-content__header { width: 70%; height: 14rem; }
+  .snap .snap-content .snap-content__header .snap-content__header-subtitle { margin-left: 12%; margin-top: 3rem; font-size: 1rem; }
+  .snap .snap-content .snap-content__header .snap-content__header-title { font-size: 1.6rem; line-height: 2.4rem; margin-top: 1rem; margin-left: 12%; word-break: keep-all; word-wrap: break-word; }
+  .snap .snap-content .snap-content__gallery { width: 30%; margin-right: 5%; right: 0; bottom: 10%; }
+  .snap .snap-content .snap-content__gallery .gallery-tab { height: 17vw; margin-top: 2rem; -webkit-box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); }
+  .snap .snap-content .snap-content__gallery .gallery-tab .gallery-title { padding-left: 5%; font-size: 1rem; bottom: 1rem; }
+  .snap .snap-content .snap-content__more { bottom: 10%; margin-left: 5%; width: 40%; height: 6rem; border-radius: 6rem; padding-left: 2rem; padding-right: 2rem; }
+  .snap .snap-content .snap-content__more p { font-size: 1.2rem; line-height: 1.8rem; }
+  .snap .snap-content .snap-content__more span { width: 1.8rem; } }
 
 /*# sourceMappingURL=class.css.map */
