--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -500,7 +500,7 @@ body {
 	.lesson {
 		.lesson-header {
 			width: 100%;
-			height: 29vh;
+			height: 55vw;
 			position: relative;
 			.lesson-header__bg {
 				img {
@@ -571,7 +571,7 @@ body {
 					}				
 					.lesson-button__submit {
 						bottom: 4rem;
-						font-size: 1.6rem;
+						font-size: 1.2rem;
 					}
 				}
 			}
@@ -616,7 +616,7 @@ body {
 			margin-top: 3rem;
 		}
 		.safety-text {
-			margin-top: 2rem;
+			margin-top: 3rem;
 			width: 80%;
 		}
 		.safety-button-wrapper {
@@ -676,9 +676,11 @@ body {
 					margin-top: 2rem;
 					@include box-shadow(0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5));
 					.gallery-title {
-						padding-left: 5%;
-						font-size: 1rem;
-						bottom: 1rem;
+						font-size: 1.2rem;
+						bottom: 0.5rem;
+						padding-left: 0;
+						padding-right: 5%;
+						text-align: right;
 					}
 				}
 			}
@@ -688,11 +690,15 @@ body {
 				width: 40%;
 				height: 6rem;
 				border-radius: 6rem;
-				padding-left: 2rem;
-				padding-right: 2rem;
+				padding-left: 3rem;
+				padding-right: 3rem;
 				p{
-					font-size: 1.2rem;
-					line-height: 1.8rem;
+					font-size: 1.4rem;
+					line-height: 1.6rem;
+					width: 65%;
+					text-align: left;
+					word-wrap: break-word;
+					word-break: keep-all;
 				}
 				span {
 					width: 1.8rem;
