--- a/stylesheets/css/class.css
+++ b/stylesheets/css/class.css
@@ -79,7 +79,7 @@ body { width: 100%; overflow-x: hidden; }
 .snap .snap-content .snap-content__more span { width: 2.5rem; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .snap .snap-content .snap-content__more span img { width: 100%; }
 
-@media screen and (min-width: 320px) and (max-width: 800px) { .lesson .lesson-header { width: 100%; height: 29vh; position: relative; }
+@media screen and (min-width: 320px) and (max-width: 800px) { .lesson .lesson-header { width: 100%; height: 55vw; position: relative; }
   .lesson .lesson-header .lesson-header__bg img { width: unset; height: 100%; }
   .lesson .lesson-header .lesson-header__text { padding: 0 12%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-top: 7%; }
   .lesson .lesson-header .lesson-header__text .lesson-header__subtitle { font-size: 1rem; }
@@ -95,7 +95,7 @@ body { width: 100%; overflow-x: hidden; }
   .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile { margin-left: 5%; }
   .lesson .lesson-content .lesson-content__type .lesson-button { width: 100%; height: 10rem; bottom: -4rem; }
   .lesson .lesson-content .lesson-content__type .lesson-button:hover { -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
-  .lesson .lesson-content .lesson-content__type .lesson-button .lesson-button__submit { bottom: 4rem; font-size: 1.6rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-button .lesson-button__submit { bottom: 4rem; font-size: 1.2rem; }
   .teacher { padding: 3% 7% 15% 7%; margin-top: 4rem; }
   .teacher .teacher-wrapper .teacher-profile { width: 50%; margin-top: 5rem; }
   .teacher .teacher-wrapper .teacher-profile .teacher-profile__pic { width: 9rem; height: 9rem; }
@@ -105,7 +105,7 @@ body { width: 100%; overflow-x: hidden; }
   .safety { padding: 0 5%; margin-top: 10rem; }
   .safety .safety-indicator { width: 15%; }
   .safety .safety-title { font-size: 1.6rem; margin-top: 3rem; }
-  .safety .safety-text { margin-top: 2rem; width: 80%; }
+  .safety .safety-text { margin-top: 3rem; width: 80%; }
   .safety .safety-button-wrapper { margin-top: 1rem; padding: 0 18%; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
   .safety .safety-button-wrapper .safety-button { margin-left: 0; width: 100%; height: 6rem; margin-top: 3rem; border-radius: 6rem; padding-right: 3rem; }
   .safety .safety-button-wrapper .safety-button p { font-size: 1.4rem; line-height: 1.8rem; }
@@ -117,9 +117,9 @@ body { width: 100%; overflow-x: hidden; }
   .snap .snap-content .snap-content__header .snap-content__header-title { font-size: 1.6rem; line-height: 2.4rem; margin-top: 1rem; margin-left: 12%; word-break: keep-all; word-wrap: break-word; }
   .snap .snap-content .snap-content__gallery { width: 30%; margin-right: 5%; right: 0; bottom: 10%; }
   .snap .snap-content .snap-content__gallery .gallery-tab { height: 17vw; margin-top: 2rem; -webkit-box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); }
-  .snap .snap-content .snap-content__gallery .gallery-tab .gallery-title { padding-left: 5%; font-size: 1rem; bottom: 1rem; }
-  .snap .snap-content .snap-content__more { bottom: 10%; margin-left: 5%; width: 40%; height: 6rem; border-radius: 6rem; padding-left: 2rem; padding-right: 2rem; }
-  .snap .snap-content .snap-content__more p { font-size: 1.2rem; line-height: 1.8rem; }
+  .snap .snap-content .snap-content__gallery .gallery-tab .gallery-title { font-size: 1.2rem; bottom: 0.5rem; padding-left: 0; padding-right: 5%; text-align: right; }
+  .snap .snap-content .snap-content__more { bottom: 10%; margin-left: 5%; width: 40%; height: 6rem; border-radius: 6rem; padding-left: 3rem; padding-right: 3rem; }
+  .snap .snap-content .snap-content__more p { font-size: 1.4rem; line-height: 1.6rem; width: 65%; text-align: left; word-wrap: break-word; word-break: keep-all; }
   .snap .snap-content .snap-content__more span { width: 1.8rem; } }
 
 /*# sourceMappingURL=class.css.map */
