--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -872,15 +872,15 @@ body {
 @media screen and (min-width: 320px) and (max-width: 800px) {
 	.slider {
 		width: 100%;
-		height: 50vh;
+		height: 90vw;
 		.slider-wrapper {
 			.slide {
 				width: 100%;
-				height: 50vh;
+				height: 90vw;
 				&.active {}
 				.slide-image {
 					width: 100%;
-					height: 50vh;
+					height: 90vw;
 					@include flexbox();
 					@include justify-content(center);
 					@include align-items(center);
@@ -956,30 +956,34 @@ body {
 				}
 				.review-header__title {
 					width: 100%;
-					font-size: 1.6rem;
-					line-height: 2.4rem;
+					font-size: 1.8rem;
+					line-height: 2.6rem;
 					margin-top: 1rem;
 					position: relative;
 				}
 				.review-header__more {
 					width: 90%;
-					height: 4.5rem;
+					height: 6rem;
 					left: -1rem;
 					bottom: 3rem;
-					padding-left: 1.5rem;
-					padding-right: 1.5rem;
+					padding-left: 2.5rem;
+					padding-right: 2.5rem;
 					&:hover {
 						span {
 							@include transform(translateX(10px));
 						}
 					}
 					p{
-						font-size: 1rem;
-						line-height: 1.4rem;
+						font-size: 1.4rem;
+						line-height: 1.6rem;
+						width: 65%;
+						text-align: left;
+						word-wrap: break-word;
+						word-break: keep-all;
 					}
 					span {
 						width: 1.8rem;
-						height: 1.4rem;
+						height: 1.6rem;
 					}				
 				}
 			}
@@ -1065,14 +1069,14 @@ body {
 		.lesson-bg {
 		}
 		.lesson-header {
-			width: 55%;
+			width: 65%;
 			border-bottom: 2px solid $main-color;
 			.lesson-header__subtitle {				
 				font-size: 1rem;
 			}
 			.lesson-header__title {
-				font-size: 1.6rem;
-				line-height: 2.4rem;
+				font-size: 1.8rem;
+				line-height: 2.6rem;
 				margin-top: 1rem;
 				margin-bottom: 3rem;
 			}
@@ -1134,6 +1138,9 @@ body {
 				}
 				.lesson-button {
 					width: 100%;
+					&:hover {
+						@include box-shadow(none);
+					}
 					.lesson-button__submit {
 						width: 100%;
 						bottom: 4rem;
@@ -1153,7 +1160,7 @@ body {
 			margin-top: 3rem;
 		}
 		.safety-text {
-			margin-top: 2rem;
+			margin-top: 3rem;
 			width: 80%;
 		}
 		.safety-button-wrapper {
@@ -1213,9 +1220,11 @@ body {
 					margin-top: 2rem;
 					@include box-shadow(0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5));
 					.gallery-title {
-						padding-left: 5%;
-						font-size: 1rem;
-						bottom: 1rem;
+						padding-left: 0;
+						padding-right: 5%;
+						font-size: 1.2rem;
+						bottom: 0.5rem;
+						text-align: right;
 					}
 				}
 			}
@@ -1225,11 +1234,15 @@ body {
 				width: 40%;
 				height: 6rem;
 				border-radius: 6rem;
-				padding-left: 2rem;
-				padding-right: 2rem;
+				padding-left: 2.5rem;
+				padding-right: 2.5rem;
 				p{
-					font-size: 1.2rem;
-					line-height: 1.8rem;
+					font-size: 1.4rem;
+					line-height: 1.6rem;
+					width: 65%;
+					text-align: left;
+					word-wrap: break-word;
+					word-break: keep-all;
 				}
 				span {
 					width: 1.8rem;
@@ -1308,8 +1321,12 @@ body {
 					padding-right: 3rem;
 					margin-top: 3.5rem;
 					p{
-						font-size: 1.2rem;
-						line-height: 1.8rem;
+						font-size: 1.4rem;
+						line-height: 1.6rem;
+						width: 65%;
+						text-align: left;
+						word-wrap: break-word;
+						word-break: keep-all;
 					}
 					span {
 						width: 1.8rem;
