--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -266,7 +266,7 @@ body {
 }
 @media screen and (min-width: 320px) and (max-width: 800px) {
 .location {
-	height: 80vh;
+	height: 145vw;
 	.location-map {
 		width: 100%;
 		height: 100%;
@@ -294,8 +294,8 @@ body {
 			}
 			.content-header__title {
 				width: 100%;
-				font-size: 1.6rem;
-				line-height: 2.4rem;
+				font-size: 1.8rem;
+				line-height: 2.6rem;
 				margin-top: 1rem;
 			}
 		}
@@ -386,6 +386,8 @@ body {
 		.ad-tab__text {
 			.text-title {
 				font-size: 1.4rem;
+				word-break: keep-all;
+				word-wrap: break-word;
 			}
 			span {
 				height: 1.5rem;
